feat(wafconsole): 在上层服务中的wafuser模块集成gin框架接口，添加sse服务端
