# wafconsole/api/user/v1/common.pb.go
@@ -30,8 +30,8 @@ var file_v1_common_proto_rawDesc = string([]byte{
 	0x6f, 0x12, 0x0b, 0x61, 0x70, 0x69, 0x2e, 0x75, 0x73, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x1a, 0x10,
 	0x76, 0x31, 0x2f, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
 	0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e,
-	0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xcf,
-	0x04, 0x0a, 0x06, 0x43, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x12, 0x80, 0x01, 0x0a, 0x0e, 0x43, 0x72,
+	0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xe5,
+	0x03, 0x0a, 0x06, 0x43, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x12, 0x80, 0x01, 0x0a, 0x0e, 0x43, 0x72,
 	0x65, 0x61, 0x74, 0x65, 0x4e, 0x65, 0x77, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x12, 0x22, 0x2e, 0x61,
 	0x70, 0x69, 0x2e, 0x75, 0x73, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74,
 	0x65, 0x4e, 0x65, 0x77, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
@@ -61,17 +61,10 @@ var file_v1_common_proto_rawDesc = string([]byte{
 	0x2e, 0x75, 0x73, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x53, 0x65, 0x6e, 0x64, 0x45, 0x6d, 0x61,
 	0x69, 0x6c, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12,
 	0x15, 0x2f, 0x61, 0x70, 0x70, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x2f, 0x77, 0x61,
-	0x66, 0x2f, 0x63, 0x6f, 0x64, 0x65, 0x12, 0x68, 0x0a, 0x0a, 0x53, 0x73, 0x65, 0x43, 0x6f, 0x6e,
-	0x6e, 0x65, 0x63, 0x74, 0x12, 0x1e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x75, 0x73, 0x65, 0x72, 0x2e,
-	0x76, 0x31, 0x2e, 0x53, 0x73, 0x65, 0x43, 0x6f, 0x6e, 0x6e, 0x65, 0x63, 0x74, 0x52, 0x65, 0x71,
-	0x75, 0x65, 0x73, 0x74, 0x1a, 0x1c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x75, 0x73, 0x65, 0x72, 0x2e,
-	0x76, 0x31, 0x2e, 0x53, 0x73, 0x65, 0x43, 0x6f, 0x6e, 0x6e, 0x65, 0x63, 0x74, 0x52, 0x65, 0x70,
-	0x6c, 0x79, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x12, 0x14, 0x2f, 0x61, 0x70, 0x70,
-	0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x2f, 0x77, 0x61, 0x66, 0x2f, 0x73, 0x73, 0x65,
-	0x42, 0x2a, 0x0a, 0x0b, 0x61, 0x70, 0x69, 0x2e, 0x75, 0x73, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x50,
-	0x01, 0x5a, 0x19, 0x77, 0x61, 0x66, 0x63, 0x6f, 0x6e, 0x73, 0x6f, 0x6c, 0x65, 0x2f, 0x61, 0x70,
-	0x69, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x33,
+	0x66, 0x2f, 0x63, 0x6f, 0x64, 0x65, 0x42, 0x2a, 0x0a, 0x0b, 0x61, 0x70, 0x69, 0x2e, 0x75, 0x73,
+	0x65, 0x72, 0x2e, 0x76, 0x31, 0x50, 0x01, 0x5a, 0x19, 0x77, 0x61, 0x66, 0x63, 0x6f, 0x6e, 0x73,
+	0x6f, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x3b,
+	0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 })
 
 var file_v1_common_proto_goTypes = []any{
@@ -79,26 +72,22 @@ var file_v1_common_proto_goTypes = []any{
 	(*GetCaptchaRequest)(nil),     // 1: api.user.v1.GetCaptchaRequest
 	(*VerifyCaptchaRequest)(nil),  // 2: api.user.v1.VerifyCaptchaRequest
 	(*SendEmailRequest)(nil),      // 3: api.user.v1.SendEmailRequest
-	(*SseConnectRequest)(nil),     // 4: api.user.v1.SseConnectRequest
-	(*CreateNewTokenReply)(nil),   // 5: api.user.v1.CreateNewTokenReply
-	(*GetCaptchaReply)(nil),       // 6: api.user.v1.GetCaptchaReply
-	(*VerifyCaptchaReply)(nil),    // 7: api.user.v1.VerifyCaptchaReply
-	(*SendEmailReply)(nil),        // 8: api.user.v1.SendEmailReply
-	(*SseConnectReply)(nil),       // 9: api.user.v1.SseConnectReply
+	(*CreateNewTokenReply)(nil),   // 4: api.user.v1.CreateNewTokenReply
+	(*GetCaptchaReply)(nil),       // 5: api.user.v1.GetCaptchaReply
+	(*VerifyCaptchaReply)(nil),    // 6: api.user.v1.VerifyCaptchaReply
+	(*SendEmailReply)(nil),        // 7: api.user.v1.SendEmailReply
 }
 var file_v1_common_proto_depIdxs = []int32{
 	0, // 0: api.user.v1.Common.CreateNewToken:input_type -> api.user.v1.CreateNewTokenRequest
 	1, // 1: api.user.v1.Common.GetCaptcha:input_type -> api.user.v1.GetCaptchaRequest
 	2, // 2: api.user.v1.Common.VerifyCaptcha:input_type -> api.user.v1.VerifyCaptchaRequest
 	3, // 3: api.user.v1.Common.SendCode:input_type -> api.user.v1.SendEmailRequest
-	4, // 4: api.user.v1.Common.SseConnect:input_type -> api.user.v1.SseConnectRequest
-	5, // 5: api.user.v1.Common.CreateNewToken:output_type -> api.user.v1.CreateNewTokenReply
-	6, // 6: api.user.v1.Common.GetCaptcha:output_type -> api.user.v1.GetCaptchaReply
-	7, // 7: api.user.v1.Common.VerifyCaptcha:output_type -> api.user.v1.VerifyCaptchaReply
-	8, // 8: api.user.v1.Common.SendCode:output_type -> api.user.v1.SendEmailReply
-	9, // 9: api.user.v1.Common.SseConnect:output_type -> api.user.v1.SseConnectReply
-	5, // [5:10] is the sub-list for method output_type
-	0, // [0:5] is the sub-list for method input_type
+	4, // 4: api.user.v1.Common.CreateNewToken:output_type -> api.user.v1.CreateNewTokenReply
+	5, // 5: api.user.v1.Common.GetCaptcha:output_type -> api.user.v1.GetCaptchaReply
+	6, // 6: api.user.v1.Common.VerifyCaptcha:output_type -> api.user.v1.VerifyCaptchaReply
+	7, // 7: api.user.v1.Common.SendCode:output_type -> api.user.v1.SendEmailReply
+	4, // [4:8] is the sub-list for method output_type
+	0, // [0:4] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
