# wafconsole/api/user/v1/message.pb.go
@@ -1067,6 +1067,90 @@ func (*SseConnectRequest) Descriptor() ([]byte, []int) {
 	return file_v1_message_proto_rawDescGZIP(), []int{20}
 }
 
+type EarthData struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	FormIpAddr    string                 `protobuf:"bytes,1,opt,name=form_ip_addr,json=formIpAddr,proto3" json:"form_ip_addr,omitempty"`
+	ToIpAddr      string                 `protobuf:"bytes,2,opt,name=to_ip_addr,json=toIpAddr,proto3" json:"to_ip_addr,omitempty"`
+	FormLongitude string                 `protobuf:"bytes,3,opt,name=form_longitude,json=formLongitude,proto3" json:"form_longitude,omitempty"`
+	FormLatitude  string                 `protobuf:"bytes,4,opt,name=form_latitude,json=formLatitude,proto3" json:"form_latitude,omitempty"`
+	ToLongitude   string                 `protobuf:"bytes,5,opt,name=to_longitude,json=toLongitude,proto3" json:"to_longitude,omitempty"`
+	ToLatitude    string                 `protobuf:"bytes,6,opt,name=to_latitude,json=toLatitude,proto3" json:"to_latitude,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *EarthData) Reset() {
+	*x = EarthData{}
+	mi := &file_v1_message_proto_msgTypes[21]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *EarthData) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*EarthData) ProtoMessage() {}
+
+func (x *EarthData) ProtoReflect() protoreflect.Message {
+	mi := &file_v1_message_proto_msgTypes[21]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use EarthData.ProtoReflect.Descriptor instead.
+func (*EarthData) Descriptor() ([]byte, []int) {
+	return file_v1_message_proto_rawDescGZIP(), []int{21}
+}
+
+func (x *EarthData) GetFormIpAddr() string {
+	if x != nil {
+		return x.FormIpAddr
+	}
+	return ""
+}
+
+func (x *EarthData) GetToIpAddr() string {
+	if x != nil {
+		return x.ToIpAddr
+	}
+	return ""
+}
+
+func (x *EarthData) GetFormLongitude() string {
+	if x != nil {
+		return x.FormLongitude
+	}
+	return ""
+}
+
+func (x *EarthData) GetFormLatitude() string {
+	if x != nil {
+		return x.FormLatitude
+	}
+	return ""
+}
+
+func (x *EarthData) GetToLongitude() string {
+	if x != nil {
+		return x.ToLongitude
+	}
+	return ""
+}
+
+func (x *EarthData) GetToLatitude() string {
+	if x != nil {
+		return x.ToLatitude
+	}
+	return ""
+}
+
 type SseConnectReply struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	unknownFields protoimpl.UnknownFields
@@ -1075,7 +1159,7 @@ type SseConnectReply struct {
 
 func (x *SseConnectReply) Reset() {
 	*x = SseConnectReply{}
-	mi := &file_v1_message_proto_msgTypes[21]
+	mi := &file_v1_message_proto_msgTypes[22]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -1087,7 +1171,7 @@ func (x *SseConnectReply) String() string {
 func (*SseConnectReply) ProtoMessage() {}
 
 func (x *SseConnectReply) ProtoReflect() protoreflect.Message {
-	mi := &file_v1_message_proto_msgTypes[21]
+	mi := &file_v1_message_proto_msgTypes[22]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -1100,7 +1184,7 @@ func (x *SseConnectReply) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use SseConnectReply.ProtoReflect.Descriptor instead.
 func (*SseConnectReply) Descriptor() ([]byte, []int) {
-	return file_v1_message_proto_rawDescGZIP(), []int{21}
+	return file_v1_message_proto_rawDescGZIP(), []int{22}
 }
 
 var File_v1_message_proto protoreflect.FileDescriptor
@@ -1262,11 +1346,25 @@ var file_v1_message_proto_rawDesc = string([]byte{
 	0x6e, 0x27, 0x5d, 0x52, 0x0a, 0x73, 0x65, 0x6e, 0x64, 0x41, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x22,
 	0x10, 0x0a, 0x0e, 0x53, 0x65, 0x6e, 0x64, 0x45, 0x6d, 0x61, 0x69, 0x6c, 0x52, 0x65, 0x70, 0x6c,
 	0x79, 0x22, 0x13, 0x0a, 0x11, 0x53, 0x73, 0x65, 0x43, 0x6f, 0x6e, 0x6e, 0x65, 0x63, 0x74, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x11, 0x0a, 0x0f, 0x53, 0x73, 0x65, 0x43, 0x6f, 0x6e,
-	0x6e, 0x65, 0x63, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x42, 0x2a, 0x0a, 0x0b, 0x61, 0x70, 0x69,
-	0x2e, 0x75, 0x73, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x50, 0x01, 0x5a, 0x19, 0x77, 0x61, 0x66, 0x63,
-	0x6f, 0x6e, 0x73, 0x6f, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f,
-	0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0xdb, 0x01, 0x0a, 0x09, 0x45, 0x61, 0x72, 0x74, 0x68,
+	0x44, 0x61, 0x74, 0x61, 0x12, 0x20, 0x0a, 0x0c, 0x66, 0x6f, 0x72, 0x6d, 0x5f, 0x69, 0x70, 0x5f,
+	0x61, 0x64, 0x64, 0x72, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0a, 0x66, 0x6f, 0x72, 0x6d,
+	0x49, 0x70, 0x41, 0x64, 0x64, 0x72, 0x12, 0x1c, 0x0a, 0x0a, 0x74, 0x6f, 0x5f, 0x69, 0x70, 0x5f,
+	0x61, 0x64, 0x64, 0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x74, 0x6f, 0x49, 0x70,
+	0x41, 0x64, 0x64, 0x72, 0x12, 0x25, 0x0a, 0x0e, 0x66, 0x6f, 0x72, 0x6d, 0x5f, 0x6c, 0x6f, 0x6e,
+	0x67, 0x69, 0x74, 0x75, 0x64, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0d, 0x66, 0x6f,
+	0x72, 0x6d, 0x4c, 0x6f, 0x6e, 0x67, 0x69, 0x74, 0x75, 0x64, 0x65, 0x12, 0x23, 0x0a, 0x0d, 0x66,
+	0x6f, 0x72, 0x6d, 0x5f, 0x6c, 0x61, 0x74, 0x69, 0x74, 0x75, 0x64, 0x65, 0x18, 0x04, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x0c, 0x66, 0x6f, 0x72, 0x6d, 0x4c, 0x61, 0x74, 0x69, 0x74, 0x75, 0x64, 0x65,
+	0x12, 0x21, 0x0a, 0x0c, 0x74, 0x6f, 0x5f, 0x6c, 0x6f, 0x6e, 0x67, 0x69, 0x74, 0x75, 0x64, 0x65,
+	0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x74, 0x6f, 0x4c, 0x6f, 0x6e, 0x67, 0x69, 0x74,
+	0x75, 0x64, 0x65, 0x12, 0x1f, 0x0a, 0x0b, 0x74, 0x6f, 0x5f, 0x6c, 0x61, 0x74, 0x69, 0x74, 0x75,
+	0x64, 0x65, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0a, 0x74, 0x6f, 0x4c, 0x61, 0x74, 0x69,
+	0x74, 0x75, 0x64, 0x65, 0x22, 0x11, 0x0a, 0x0f, 0x53, 0x73, 0x65, 0x43, 0x6f, 0x6e, 0x6e, 0x65,
+	0x63, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x42, 0x2a, 0x0a, 0x0b, 0x61, 0x70, 0x69, 0x2e, 0x75,
+	0x73, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x50, 0x01, 0x5a, 0x19, 0x77, 0x61, 0x66, 0x63, 0x6f, 0x6e,
+	0x73, 0x6f, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f, 0x76, 0x31,
+	0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 })
 
 var (
@@ -1281,7 +1379,7 @@ func file_v1_message_proto_rawDescGZIP() []byte {
 	return file_v1_message_proto_rawDescData
 }
 
-var file_v1_message_proto_msgTypes = make([]protoimpl.MessageInfo, 22)
+var file_v1_message_proto_msgTypes = make([]protoimpl.MessageInfo, 23)
 var file_v1_message_proto_goTypes = []any{
 	(*CreateWafUserRequest)(nil),  // 0: api.user.v1.CreateWafUserRequest
 	(*CreateWafUserReply)(nil),    // 1: api.user.v1.CreateWafUserReply
@@ -1304,7 +1402,8 @@ var file_v1_message_proto_goTypes = []any{
 	(*SendEmailRequest)(nil),      // 18: api.user.v1.SendEmailRequest
 	(*SendEmailReply)(nil),        // 19: api.user.v1.SendEmailReply
 	(*SseConnectRequest)(nil),     // 20: api.user.v1.SseConnectRequest
-	(*SseConnectReply)(nil),       // 21: api.user.v1.SseConnectReply
+	(*EarthData)(nil),             // 21: api.user.v1.EarthData
+	(*SseConnectReply)(nil),       // 22: api.user.v1.SseConnectReply
 }
 var file_v1_message_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
@@ -1325,7 +1424,7 @@ func file_v1_message_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_v1_message_proto_rawDesc), len(file_v1_message_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   22,
+			NumMessages:   23,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
